# mail_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/blog/: posts_confirm_delete.html  posts_detail.html  posts_form.html  posts_list.html
blog/templates/blog/includes/: inc_full_post_card.html  inc_paginator_old_new.html  inc_paginator_pages.html  inc_post_card.html  inc_post_head_section.html
config/: settings.py  urls.py
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_initial.py
contacts/templates/contacts/contact/: contact_detail.html  contact_form.html  contact_list.html
frontend/: forms.py  urls.py  views.py
frontend/templates/frontend/: base.html  index.html
frontend/templatetags/: my_tags.py
logs/: models.py  urls.py  views.py
logs/migrations/: 0001_initial.py  0002_initial.py
logs/templates/logs/: logs_confirm_delete.html  logs_detail.html
mailing/: cron.py  forms.py  models.py  service.py  urls.py  views.py
mailing/management/commands/: send_mail.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
service/: utils.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_su.py  load_countries.py
users/migrations/: 0001_initial.py
users/templates/users/: user_form.html  user_list.html
(+27 files in other folders)
